# plasen

./: pyproject.toml  simulation_8h.csv  spec.csv
example_data/: 87Rb_I=1.5.json
example_data/1340&1341(laser scan)/: cali_1340.csv  cali_1341.csv  cali_1737189496.4011471_diode.csv  cali_1737189947.3715186_diode.csv  scan_1340.csv  scan_1341.csv
src/plasen/: __init__.py
tests/: 87Rb_laser_scan.csv  87Rb_laser_scan.py  87Rb_laser_scan_rates.csv  87Rb_voltage_scan.py  simulation.py
